Alteração nas classes principais